# saarvis

./: .gitignore  LICENSE  README.md  README_de.md  ai_responder.py  changelog.md  main.py  prompt.txt.example  ptt.py  pyproject.toml  ttt.py
.github/: FUNDING.yml
tests/: test_main.py  test_ptt.py
